# llm-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  audit.txt  goal.md  implementaion-plan.md  output.txt  quant-performance-plan.md  qwen2.5-0.5b  v1-plan.md
docs/: mlc-contracts.md
llm-cli/: Cargo.toml
llm-cli/src/: lib.rs  main.rs
llm-cli/tests/: server_tests.rs
llm-cluster/: Cargo.toml
llm-cluster/src/: analyzer.rs  collective.rs  lib.rs  main.rs  moe.rs  pipeline.rs  profiler.rs  protocol.rs  recovery.rs  tensor_parallel.rs
llm-core/: Cargo.toml
llm-core/src/: backend.rs  conv_template.rs  lib.rs  metadata.rs  quantization.rs  sampler.rs  tokenizer.rs  types.rs
llm-core/src/backends/: attention.rs  audio.rs  candle.rs  mod.rs  multimodal.rs  vision.rs  weights.rs
llm-core/src/graph/: builder.rs  mod.rs  ops.rs  scan.rs
llm-core/src/loader/: awq.rs  gguf.rs  gptq.rs  mlx.rs  mod.rs  safetensors.rs
llm-core/src/model/: config.rs
llm-core/src/profile/: mod.rs
llm-core/tests/: mlc_parity_tests.rs
llm-ffi/: Cargo.toml
llm-ffi/src/: lib.rs
llm-kernel/: Cargo.toml
llm-kernel/src/: attention.rs  gemv.rs  lib.rs  rmsnorm.rs  rope.rs  silu.rs
llm-kernel/tests/: kernel_tests.rs
llm-py/: Cargo.toml  README.md  pyproject.toml
llm-py/python/llm_rs/: __init__.py
llm-py/src/: lib.rs
llm-scheduler/: Cargo.toml
llm-scheduler/src/: block_allocator.rs  engine.rs  lib.rs  prefix_cache.rs  scheduler.rs
llm-scheduler/tests/: integration_tests.rs
llm-tests/: Cargo.toml
llm-tests/tests/: concurrency_test.rs  mlc_parity.rs  mlc_test.rs
scratch/: audio_names.txt  check_qmatmul_dtype.rs  debug_tokenizer.rs  download_models.py  download_tokenizers.py  dump_metadata.rs  dump_mmproj.py  gemma4_names.txt  generate_dummy_wav.py  output.txt  print_chat_template.rs  print_gguf_keys.rs  qwen_tensors.txt  test_cuda.rs  test_device.rs  test_gguf.rs  test_input.txt  test_qmatmul.rs
scripts/: hardware_check.sh
tests/: test_parity.py
