[workspace]
members = [
    "llm-core",
    "llm-kernel",
    "llm-scheduler",
    "llm-cli",
    "llm-cluster",
    "llm-ffi",
    "llm-tests",
]
resolver = "2"

[workspace.dependencies]
cubecl = { version = "0.6" }
cubecl-cuda = "0.6"
cubecl-wgpu = "0.6"
candle-core = { version = "0.9" }
candle-nn = "0.9"
safetensors = "0.5"
memmap2 = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.7", features = ["tokio"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
half = "2.4"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"
tower = { version = "0.5", features = ["util"] }
http = "1.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "wav", "isomp4"] }
parking_lot = "0.12"
tower-http = { version = "0.6", features = ["limit"] }

[profile.release]
# Inference-engine-appropriate release settings. Deliberately keep
# panic = "unwind" (the default): llm-ffi's extern "C" boundary relies on
# std::panic::catch_unwind to avoid UB from unwinding across the FFI
# boundary, which requires unwind panics to be available.
lto = "thin"
codegen-units = 1
opt-level = 3

