[package]
name = "llm-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-core = { path = "../llm-core" }
llm-scheduler = { path = "../llm-scheduler" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
candle-core = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http = { workspace = true }

[features]
cuda = ["llm-core/cuda"]
metal = ["llm-core/metal"]
