[package]
name = "llm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[[bin]]
name = "test_gguf_names"
path = "/home/mukundan/.gemini/antigravity/brain/0fb9c17f-d6a6-4fe2-b8d6-fdc16e15cd81/scratch/test_gguf_names.rs"

[[bin]]
name = "test_gguf"
path = "/home/mukundan/.gemini/antigravity/brain/0fb9c17f-d6a6-4fe2-b8d6-fdc16e15cd81/scratch/test_gguf.rs"

[[bin]]
name = "test_gguf_metadata"
path = "/home/mukundan/.gemini/antigravity/brain/0fb9c17f-d6a6-4fe2-b8d6-fdc16e15cd81/scratch/test_gguf_metadata.rs"










