[package]
name = "llm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[[bin]]
name = "debug_tokenizer"
path = "../scratch/debug_tokenizer.rs"

[[bin]]
name = "print_chat_template"
path = "../scratch/print_chat_template.rs"

