[package]
name = "llm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.31.0", optional = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]

