[package]
name = "llm-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_llm_rs_native"
crate-type = ["cdylib"]

[dependencies]
llm-core = { path = "../llm-core" }
llm-scheduler = { path = "../llm-scheduler" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module", "anyhow"] }

[features]
cuda = ["llm-core/cuda"]
metal = ["llm-core/metal"]
