[package]
name = "llm-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-core = { path = "../llm-core" }
tokio = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
